package estructural.facade;

public interface Codec {
}
